# grpc-rs

./: .travis.yml  Cargo.toml
benchmark/: Cargo.toml
benchmark/src/: bench.rs  client.rs  server.rs  worker.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  prost.rs
examples/hello_world/: server.rs
examples/route_guide/: client.rs  server.rs
grpc-sys/bindings/: x86_64-unknown-linux-gnu-bindings.rs
interop/: Cargo.toml
interop/src/: client.rs  server.rs
proto/: Cargo.toml  build.rs
proto/proto/grpc/health/v1/: health.proto
proto/proto/grpc/testing/: control.proto
proto/src/: lib.rs  util.rs
src/: buf.rs  codec.rs  lib.rs  metadata.rs  quota.rs
src/call/: client.rs  mod.rs
src/call_v2/: client.rs  mod.rs  ops.rs  tag.rs
src/task/: lock.rs  mod.rs  promise.rs
test-service/: Cargo.toml
test-service/proto/: service.proto
test-service/src/: service.rs  service_grpc.rs
tests/cases/: health_check.rs
