[package]
name = "grpcio-proto"
version = "0.5.0-alpha"
edition = "2018"
authors = ["The TiKV Project Developers"]
license = "Apache-2.0"
keywords = ["grpc", "proto"]
repository = "https://github.com/pingcap/grpc-rs"
homepage = "https://github.com/pingcap/grpc-rs"
documentation = "https://docs.rs/grpcio-sys"
description = "Public proto files for grpcio."
categories = ["network-programming"]
build = "build.rs"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf", "jinkela-build/grpcio-protobuf-codec", "jinkela/protobuf-codec", "grpcio/protobuf-codec"]
prost-codec = ["prost", "jinkela-build/grpcio-prost-codec", "bytes", "quick-error", "jinkela/prost-codec", "grpcio/prost-codec"]

[dependencies]
futures = "0.1"
grpcio = { path = "..", features = ["secure"], default-features = false }
bytes = { version = "0.4.11", optional = true }
lazy_static = "1.3.0"
prost = { version = "0.5", optional = true }
protobuf = { version = "2", optional = true }
quick-error = { version = "1.2", optional = true }
jinkela = { git = "https://github.com/busyjay/jinkela" }

[build-dependencies]
grpcio-compiler = { path = "../compiler" }
jinkela-build = { git = "https://github.com/busyjay/jinkela" }
walkdir = "2.2.8"
